# Bibi

./: README.md  db.sqlite3  pyproject.toml
app/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_etablissement_phone.py  0003_etablissement_logo.py
app/static/style/: GLOBAL.css  globals.css  home.css
app/templates/: _base.html  ajoutEtablissement.html  ajoutUser.html  home.html  test.html
app/templates/auth/: login.html  signup.html
app/templates/etablissement/: detailRDV.html  listRDV.html
app/templates/patient/: createRDV.html  detailEtablissement.html  listEtablissement.html
app/tests/: testModels.py
server/: settings.py  urls.py
