[tool.poetry]
name = "project-django"
version = "0.1.0"
description = ""
authors = ["Dar-rius <mohamedtine17@gmail.com>"]
readme = "README.md"
packages = [{include = "project_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-taggit = "^4.0.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
